Added isochrone logic to find the travel-time midpoint
* Added isochrone logic to find the travel-time midpoint (not distance) between two places. Also re-enabled midpoint calculation logic in the backend. Updated the build files to run the tests.